# quiz-questionizer

./: .env.template  .gitignore  README.md  app.py  camera.py  exploration.ipynb  pyproject.toml  run.cmd  test_cameras.cmd
templates/: base.html  index.html  quiz_display.html
